feat: initial commit

--- a/index.html
+++ b/index.html
@@ -1,1 +1,207 @@
-<!-- TODO -->
+<!DOCTYPE html>
+<html lang="pt-br">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>HBO Max</title>
+		<link rel="stylesheet" href="assets/css/styles.css" />
+		<link
+			rel="shortcut icon"
+			href="assets/images/hbo.png"
+			type="image/x-icon" />
+	</head>
+	<body>
+		<nav class="menu">
+			<a href="#" class="menu__logo">
+				<img src="assets/images/hbo-logo.svg" alt="Logo HBO Max" />
+			</a>
+
+			<div class="menu__item--buttons">
+				<a href="signIn.html" class="menu__item--button menu__button">
+					Entrar
+				</a>
+				<a href="#main" class="menu__item--button menu__button">
+					Assine agora
+				</a>
+			</div>
+		</nav>
+
+		<header>
+			<div class="header__logos">
+				<img
+					style="margin-right: -2rem"
+					src="assets/images/hbo.png"
+					alt="HBO Logo" />
+				<img src="assets/images/dc.png" alt="DC Logo" />
+				<img src="assets/images/wb.png" alt="Warner Bros Logo" />
+				<img
+					src="assets/images/cartoon-network_neutral.png"
+					alt="Cartoon Network Logo" />
+				<img src="assets/images/max_originals.png" alt="Max Originals Logo" />
+			</div>
+
+			<h1 class="header__title">
+				<span class="header__title--light">Curta as melhores histórias</span>
+				para todo mundo
+			</h1>
+
+			<div class="header__divider"></div>
+
+			<div class="header__subtitle">
+				<h2>
+					Assinaturas a partir de <br />
+					<span class="header__price">R$ 14,15</span>
+					<span class="header__period">/mês*</span>
+				</h2>
+			</div>
+
+			<a
+				style="z-index: 1"
+				href="#"
+				class="button__gradient button__gradient--wiggle">
+				<h3>Assine agora</h3>
+			</a>
+
+			<p class="header__addinfo">
+				*aplicável ao plano anual com o pagamento antecipado.
+			</p>
+		</header>
+
+		<main>
+			<section class="signatures">
+				<h2 class="main__title">
+					Conheça nossos planos e economize na assinatura trimestral ou anual
+					com o pagamento antecipado.
+				</h2>
+
+				<div class="main__plans">
+					<div class="main__card" id="card__left">
+						<div class="card__infos">
+							<div class="card__title">
+								<h3 class="plan__name">Mobile</h3>
+								<p class="plan__price">
+									<span class="plan__pricefull">R$ 19,90</span>
+									<span class="plan__period">/mês*</span>
+								</p>
+							</div>
+
+							<div class="card__benefits">
+								<ul>
+									<li>Aproveite em smartphones e tablets, onde quiser.</li>
+									<li>Assista em 1 tela por vez.</li>
+									<li>
+										Tenha conteúdo em resolução adaptada para cada dispositivo.
+									</li>
+									<li>
+										Baixe suas séries e filmes favoritos, assista onde e quando
+										quiser.
+									</li>
+								</ul>
+							</div>
+						</div>
+
+						<a href="#" class="button__gradient button--scale">
+							<h3>Escolher o plano mobile</h3>
+						</a>
+					</div>
+
+					<div class="main__card" id="card__right">
+						<div class="card__infos">
+							<div class="card__title">
+								<h3 class="plan__name">Multitelas</h3>
+								<p class="plan__price">
+									<span class="plan__pricefull">R$ 27,90</span>
+									<span class="plan__period">/mês*</span>
+								</p>
+							</div>
+
+							<div class="card__benefits">
+								<ul>
+									<li>Aproveite em todos os seus dispositivos.</li>
+									<li>Assista em até 3 telas ao mesmo tempo.</li>
+									<li>Tenha conteúdo em alta definição, com qualidade 4K.</li>
+									<li>
+										Baixe suas séries e filmes favoritos, assista onde e quando
+										quiser.
+									</li>
+									<li>Crie até 5 perfis diferentes.</li>
+								</ul>
+							</div>
+						</div>
+
+						<a href="#" class="button__gradient button--scale">
+							<h3>Escolher o plano multitelas</h3>
+						</a>
+					</div>
+				</div>
+			</section>
+
+			<section class="previews">
+				<h2 class="main__title">Descubra novos universos</h2>
+
+				<div class="previews__container">
+					<div class="preview__card">
+						<img src="./assets/images/hbo-default_0.webp" alt="">
+					</div>
+
+					<div class="preview__card">
+						<img src="./assets/images/MAX-Default.webp" alt="">
+					</div>
+
+					<div class="preview__card">
+						<img src="./assets/images/DC_Default.webp" alt="">
+					</div>
+
+					<div class="preview__card">
+						<img src="./assets/images/WB-Default.webp" alt="">
+					</div>
+
+					<div class="preview__card">
+						<img src="./assets/images/CN-Default.webp" alt="">
+					</div>
+
+					<div class="preview__card">
+						<img src="./assets/images/UCL-Default.webp" alt="">
+					</div>
+				</div>
+			</section>
+		</main>
+
+		<footer>
+			<div class="footer__container">
+				<div class="footer__links">
+					<a href="#" class="footer__button">Agora na HBO MAX</a>
+					<a href="#" class="footer__button">Em breve</a>
+					<a href="#" class="footer__button">Filmes em destaque</a>
+					<a href="#" class="footer__button">Séries</a>
+					<a href="#" class="footer__button">Ajuda</a>
+				</div>
+
+				<p class="footer__rights">
+					© 2022 WarnerMedia Direct Latin America, LLC. Todos os direitos
+					reservados. HBO Max é usado sob licença.
+				</p>
+			</div>
+
+			<div class="footer__socialmedia">
+				<a href="" class="footer__button">
+					<img src="./assets/images/fb_0.png" alt="HBO Facebook page" />
+				</a>
+
+				<a href="" class="footer__button">
+					<img src="./assets/images/twitter_0.png" alt="HBO Twitter page" />
+				</a>
+
+				<a href="" class="footer__button">
+					<img src="./assets/images/instagram_0.png" alt="HBO Instagram page" />
+				</a>
+
+				<a href="" class="footer__button">
+					<img src="./assets/images/youtube_0.png" alt="HBO YouTube channel" />
+				</a>
+			</div>
+		</footer>
+
+		<script src="./script/index.js"></script>
+	</body>
+</html>
