feat/fix: signin page + bugfixes
button hover bg positions fixed & z-indexes fixed

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>HBO Max</title>
+		<title>Início | HBO Max</title>
 		<link rel="stylesheet" href="assets/css/styles.css" />
 		<link
 			rel="shortcut icon"
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<nav class="menu">
-			<a href="#" class="menu__logo">
+			<a href="index.html" class="menu__logo">
 				<img src="assets/images/hbo-logo.svg" alt="Logo HBO Max" />
 			</a>
 
@@ -58,11 +58,11 @@
 			<a
 				style="z-index: 1"
 				href="#"
-				class="button__gradient button__gradient--wiggle">
+				class="button--gradient button--gradient--wiggle">
 				<h3>Assine agora</h3>
 			</a>
 
-			<p class="header__addinfo">
+			<p style="z-index: 1" class="header__addinfo">
 				*aplicável ao plano anual com o pagamento antecipado.
 			</p>
 		</header>
@@ -100,7 +100,7 @@
 							</div>
 						</div>
 
-						<a href="#" class="button__gradient button--scale">
+						<a href="#" class="button--gradient button--scale">
 							<h3>Escolher o plano mobile</h3>
 						</a>
 					</div>
@@ -129,7 +129,7 @@
 							</div>
 						</div>
 
-						<a href="#" class="button__gradient button--scale">
+						<a href="#" class="button--gradient button--scale">
 							<h3>Escolher o plano multitelas</h3>
 						</a>
 					</div>
@@ -141,27 +141,27 @@
 
 				<div class="previews__container">
 					<div class="preview__card">
-						<img src="./assets/images/hbo-default_0.webp" alt="">
+						<img src="./assets/images/hbo-default_0.webp" alt="" />
 					</div>
 
 					<div class="preview__card">
-						<img src="./assets/images/MAX-Default.webp" alt="">
+						<img src="./assets/images/MAX-Default.webp" alt="" />
 					</div>
 
 					<div class="preview__card">
-						<img src="./assets/images/DC_Default.webp" alt="">
+						<img src="./assets/images/DC_Default.webp" alt="" />
 					</div>
 
 					<div class="preview__card">
-						<img src="./assets/images/WB-Default.webp" alt="">
+						<img src="./assets/images/WB-Default.webp" alt="" />
 					</div>
 
 					<div class="preview__card">
-						<img src="./assets/images/CN-Default.webp" alt="">
+						<img src="./assets/images/CN-Default.webp" alt="" />
 					</div>
 
 					<div class="preview__card">
-						<img src="./assets/images/UCL-Default.webp" alt="">
+						<img src="./assets/images/UCL-Default.webp" alt="" />
 					</div>
 				</div>
 			</section>
