--- a/signIn.html
+++ b/signIn.html
@@ -1,1 +1,86 @@
-<!-- TODO -->
+<!DOCTYPE html>
+<html lang="pt-br">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Entrar | HBO Max</title>
+		<link rel="stylesheet" href="assets/css/signin.css" />
+		<link
+			rel="shortcut icon"
+			href="assets/images/hbo.png"
+			type="image/x-icon" />
+	</head>
+	<body>
+		<nav class="menu">
+			<a href="index.html" class="menu__logo">
+				<img src="assets/images/hbo-logo.svg" alt="Logo HBO Max" />
+			</a>
+
+			<div class="menu__item--buttons">
+				<a href="signIn.html" class="menu__item--button menu__button">
+					Entrar
+				</a>
+				<a href="#main" class="menu__item--button menu__button">
+					Assine agora
+				</a>
+			</div>
+		</nav>
+
+		<main>
+			<div class="login__container">
+				<h2>Entrar</h2>
+				<form class="login__form">
+					<p style="text-align: start">Você tem uma conta da HBO Max?</p>
+					<input
+						type="email"
+						placeholder="Endereço de e-mail"
+						class="login__field" />
+					<input
+						type="password"
+						placeholder="Senha"
+						class="login__field"
+						minlength="8" />
+				</form>
+				<div class="login__buttons">
+					<a href="" class="button--gradient"> <h3>Entrar</h3></a>
+					<a href="" class="footer__button">Esqueceu a senha?</a>
+				</div>
+			</div>
+		</main>
+
+		<footer>
+			<div class="footer__container">
+				<div class="footer__links">
+					<a href="#" class="footer__button">Agora na HBO MAX</a>
+					<a href="#" class="footer__button">Em breve</a>
+					<a href="#" class="footer__button">Filmes em destaque</a>
+					<a href="#" class="footer__button">Séries</a>
+					<a href="#" class="footer__button">Ajuda</a>
+				</div>
+
+				<p class="footer__rights">
+					© 2022 WarnerMedia Direct Latin America, LLC. Todos os direitos
+					reservados. HBO Max é usado sob licença.
+				</p>
+			</div>
+
+			<div class="footer__socialmedia">
+				<a href="" class="footer__button">
+					<img src="./assets/images/fb_0.png" alt="HBO Facebook page" />
+				</a>
+
+				<a href="" class="footer__button">
+					<img src="./assets/images/twitter_0.png" alt="HBO Twitter page" />
+				</a>
+
+				<a href="" class="footer__button">
+					<img src="./assets/images/instagram_0.png" alt="HBO Instagram page" />
+				</a>
+
+				<a href="" class="footer__button">
+					<img src="./assets/images/youtube_0.png" alt="HBO YouTube channel" />
+				</a>
+			</div>
+		</footer>
+	</body>
+</html>
