--- a/index.html
+++ b/index.html
@@ -202,6 +202,6 @@
 			</div>
 		</footer>
 
-		<script src="./script/index.js"></script>
+		<script src="./assets/js/index.js"></script>
 	</body>
 </html>
